--- a/src/TodoItem.css
+++ b/src/TodoItem.css
@@ -1,3 +1,14 @@
+/* .TodoItem{
+  padding: .5em;
+  display: flex;
+  align-items: center;
+}
+
+.TodoItem>.tittle{
+  flex-grow: 1;
+  padding: 0 .5em;
+} */
+
 .TodoItem{
   padding: .5em;
   display: flex;
