--- a/src/TodoItem.css
+++ b/src/TodoItem.css
@@ -28,8 +28,56 @@
   margin-right: .5em;
 }
 
-
 .TodoItem>.title{
   flex-grow: 1;
   padding: 0 .5em;
+}
+
+.TodoItem p{
+  font-size: 18px;
+}
+
+.Item-checkbox {
+  display: none; /* 将原生的checkbox隐藏 */
+  margin-right: 10px;
+}
+ 
+/* label 模拟 “划动条” */
+.Item-checkbox + label {  
+	position: relative;
+	display: inline-block;
+	width: 20px;
+	height: 10px;
+	border-radius: 10px;
+  background-color: #bbb;
+  margin-right: 10px;
+}
+ 
+/* “label::before伪元素 模拟 “划块” */
+.Item-checkbox + label:before {
+	content: '';
+	cursor: pointer;
+	position: absolute;
+	left: 0;
+	z-index: 99;
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	background: #F7F4F4;
+	box-shadow: 0 3px 1px rgba(0,0,0,0.05), 0 0px 1px rgba(0,0,0,0.3);
+	-webkit-transition: all 0.1s ease-in;
+	transition: all 0.1s ease-in;
+}
+ 
+/* checkbox选中状态时，“划动条”的样式 */
+.Item-checkbox:checked + label {
+	background: rgb(255, 132, 168);	
+}
+ 
+/* checkbox选中状态时，“划块”的样式 */
+.Item-checkbox:checked + label:before {
+	content: '';
+	position: absolute;
+	left: 10px;
+	background-color: rgb(189,125,162);	
 }
