--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,21 @@
 .App {
   color: #333;
   border: 1px solid #aaa;
-  border-radius: 4px;
+  border-radius: 14px;
   background: white;
   margin: 2em;
-  padding: 0 1em;
+  /* padding: 0 1em; */
   min-height: 20em;
   min-width: 32em;
   box-shadow: 0 0 1em hsla(0, 0%, 0%, 0.15);
+  overflow: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.App .inputWrapper{
+  /* margin-left: .5em;
+  margin-right: .5em; */
+  margin: .5em .3em .5em .3em;
 }
 
 .App > .todoList> li:nth-child(even){
@@ -20,10 +28,30 @@
 
 .App .HeadWrapper{
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: stretch;
+  align-items: flex-end;
+  background: url(./title.jpg) no-repeat no-repeat center;
+  background-size: 100%;
+  color: rgb(232, 236, 236);
+  height: 14em;
 }
 
-.App .HeadWrapper>button{
+.App .HeadWrapper .Head{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding-left: .5em;
+}
+
+.App .HeadWrapper button{
   margin-right: .5em;
+}
+
+button{
+  border-radius: 3px;
+  padding: .3em .8em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
